<resources>
    <string name="app_name">Media Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="duration">duration</string>
    <string name="rating">rating</string>
    <string name="director">director</string>
    <string name="genre">genre</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="category">Category</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kapil_sahu">Kapil Sahu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plot_summary" />
    <string name="watch">Trailer</string>
    <string name="this_is_the_summary">this is the summary</string>
    <string name="total_duration">total duration</string>
    <string name="this_is_the_genre">this is the genre</string>
    <string name="based_on_reviews">based on reviews</string>
    <string name="summary">Summary</string>
    <string name="as">****************************************************************************</string>
    <string name="title_activity_books__detail_">Books_Detail_Activity</string>
    <string name="author">Author</string>
    <string name="reviews">reviews</string>
    <string name="product_description">Product Description</string>
    <string name="about_the_author">About The Author</string>
    <string name="title_activity_dummy_activty">DummyActivty</string>


</resources>
