<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/rv_ll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/rv_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/rv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/rv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/year"
                android:layout_toRightOf="@+id/rv_title"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/rv_genre"
                android:text="@string/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_title"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/rv_director"
                android:text="@string/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_genre"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />

            <android.support.v7.widget.AppCompatRatingBar

                android:layout_width="wrap_content"
                android:layout_below="@id/rv_director"
                android:id="@+id/rv_rating"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:rating="2"
                android:stepSize=".5"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />




            <TextView
                android:id="@+id/rv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_director"
                android:layout_toRightOf="@+id/rv_rating"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/duration"/>


        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>